--- a/.gitignore
+++ b/.gitignore
@@ -80,7 +80,7 @@ dist
 # IDE / Editor
 .idea
 .editorconfig
-
+.vscode
 # Service worker
 sw.*
 
@@ -89,3 +89,5 @@ sw.*
 
 # Vim swap files
 *.swp
+
+
