--- a/package.json
+++ b/package.json
@@ -21,28 +21,40 @@
     }
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "@nuxtjs/axios": "^5.3.6",
+    "@nuxtjs/pwa": "^3.0.0-0",
     "cross-env": "^5.2.0",
     "express": "^4.16.4",
-    "@nuxtjs/axios": "^5.3.6",
-    "@nuxtjs/pwa": "^3.0.0-0"
+    "glob-all": "^3.1.0",
+    "nuxt": "^2.0.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
-    "@nuxtjs/vuetify": "^1.0.0",
+    "@fortawesome/free-solid-svg-icons": "^5.11.1",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
+    "@nuxtjs/dotenv": "^1.4.1",
     "@nuxtjs/eslint-config": "^1.0.1",
     "@nuxtjs/eslint-module": "^1.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
-    "prettier": "^1.16.4",
-    "husky": "^2.6.0",
-    "lint-staged": "^8.2.1",
+    "@nuxtjs/vuetify": "^1.0.0",
     "@vue/test-utils": "^1.0.0-beta.27",
+    "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
+    "cookie-universal-nuxt": "^2.0.17",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "firebase": "^6.6.2",
+    "flag-icon-css": "^3.4.0",
+    "husky": "^2.6.0",
     "jest": "^24.1.0",
-    "vue-jest": "^4.0.0-0"
+    "lint-staged": "^8.2.1",
+    "nodemon": "^1.18.9",
+    "nuxt-fontawesome": "^0.4.0",
+    "postcss-purgecss": "^1.0.0",
+    "prettier": "^1.16.4",
+    "purgecss-webpack-plugin": "^1.6.0",
+    "vue-jest": "^4.0.0-0",
+    "vue2-filters": "^0.7.2",
+    "vuebar": "^0.0.20"
   }
 }
