--- a/.gitignore
+++ b/.gitignore
@@ -30,6 +30,7 @@ bower_components
 
 # node-waf configuration
 .lock-wscript
+yarn.lock
 
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
