--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
-API_KEY='XXXXXXXXXXXX'
+SONGKICK_API_KEY='XXXXXXXXXXXX'
 FIREBASE_API_KEY='XXXXXXXXXXXX'
 FIREBASE_AUTH_DOMAIN='XXXXXXXXXXXX'
 FIREBASE_DATABASE_URL='XXXXXXXXXXXX'
