--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "babel-eslint": "^10.0.1",
     "babel-jest": "^24.1.0",
     "cookie-universal-nuxt": "^2.0.17",
+    "country-iso-3-to-2": "^1.0.1",
+    "country-reverse-geocoding": "^0.2.2",
     "eslint": "^6.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-nuxt": ">=0.4.2",
@@ -55,6 +57,7 @@
     "purgecss-webpack-plugin": "^1.6.0",
     "vue-jest": "^4.0.0-0",
     "vue2-filters": "^0.7.2",
-    "vuebar": "^0.0.20"
+    "vuebar": "^0.0.20",
+    "what-country": "^1.2.2"
   }
 }
