--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "postcss-purgecss": "^1.0.0",
     "prettier": "^1.16.4",
     "purgecss-webpack-plugin": "^1.6.0",
+    "vee-validate": "^3.0.8",
     "vue-jest": "^4.0.0-0",
     "vue2-filters": "^0.7.2",
     "vuebar": "^0.0.20",
