--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"cross-env": "^5.2.0",
 		"express": "^4.16.4",
 		"glob-all": "^3.1.0",
+		"mon": "0.0.8",
 		"nuxt": "^2.0.0"
 	},
 	"devDependencies": {
@@ -49,15 +50,14 @@
 		"eslint-config-prettier": "^4.1.0",
 		"eslint-plugin-nuxt": ">=0.4.2",
 		"eslint-plugin-prettier": "^3.0.1",
-		"firebase": "^6.6.2",
+		"firebase": "^8.2.10",
 		"flag-icon-css": "^3.4.0",
 		"formvuelatte": "^0.2.3",
 		"husky": "^2.6.0",
 		"jest": "^24.1.0",
 		"lint-staged": "^8.2.1",
-		"nodemon": "^1.18.9",
 		"nuxt-fontawesome": "^0.4.0",
-		"postcss-purgecss": "^1.0.0",
+		"postcss-purgecss": "^2.0.3",
 		"prettier": "^1.16.4",
 		"purgecss-webpack-plugin": "^1.6.0",
 		"vee-validate": "^3.0.8",
