--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,11 +1,8 @@
 {
   "recommendations": [
-    "antfu.vite",
-    "johnsoncodehk.volar",
-    "lokalise.i18n-ally",
-    "antfu.iconify",
+    "Vue.volar",
+    "vitest.explorer",
     "dbaeumer.vscode-eslint",
-    "voorjaar.windicss-intellisense",
-    "csstools.postcss"
+    "esbenp.prettier-vscode"
   ]
 }
