--- a/package.json
+++ b/package.json
@@ -1,79 +1,42 @@
 {
-    "name": "event-lynx",
-    "version": "1.0.0",
-    "private": false,
-    "author": "protob",
-    "scripts": {
-        "dev": "vite --port 3333 --open",
-        "build": "cross-env NODE_ENV=production vite-ssg build",
-        "preview": "vite preview",
-        "preview-https": "serve dist",
-        "test": "jest"
-    },
-    "keywords": [
-        "Vite",
-        "Vue3",
-        "TypeScript",
-        "Starter",
-        "Windi"
-    ],
-    "dependencies": {
-        "@fortawesome/fontawesome-svg-core": "^1.2.35",
-        "@fortawesome/free-solid-svg-icons": "^5.15.3",
-        "@fortawesome/vue-fontawesome": "^3.0.0-4",
-        "@vueuse/core": "^5.0.3",
-        "@vueuse/head": "^0.6.0",
-        "graphql": "^15.5.1",
-        "nprogress": "^0.2.0",
-        "pinia": "^2.0.0-beta.3",
-        "prism-theme-vars": "^0.2.2",
-        "villus": "^1.0.0-rc.17",
-        "vue": "^3.1.2",
-        "vue-i18n": "^9.1.6",
-        "vue-router": "^4.0.10",
-        "@formvuelate/plugin-lookup": "^2.1.0",
-        "@formvuelate/plugin-vee-validate": "^2.3.0",
-        "formvuelate": "^3.2.2",
-        "vee-validate": "^4.4.5",
-        "yup": "^0.32.9",
-        "@mdi/font": "5.9.55",
-        "roboto-fontface": "*",
-        "vuetify": "^3.0.0-alpha.0"
-    },
-    "devDependencies": {
-        "sass": "~1.32.0",
-        "sass-loader": "^10.0.0",
-        "vue-cli-plugin-vuetify": "~2.4.1",
-        "@antfu/eslint-config": "^0.6.6",
-        "@iconify/json": "^1.1.359",
-        "@intlify/vite-plugin-vue-i18n": "^2.2.1",
-        "@types/jest": "^26.0.22",
-        "@types/nprogress": "^0.2.0",
-        "@typescript-eslint/eslint-plugin": "^4.28.0",
-        "@vitejs/plugin-vue": "^1.2.3",
-        "@vue/compiler-sfc": "^3.1.2",
-        "@vue/server-renderer": "^3.1.2",
-        "@vue/test-utils": "^2.0.0-rc.4",
-        "cross-env": "^7.0.3",
-        "eslint": "^7.29.0",
-        "eslint-plugin-jest": "^24.3.5",
-        "https-localhost": "^4.6.5",
-        "jest": "^26.6.3",
-        "markdown-it-link-attributes": "^3.0.0",
-        "markdown-it-prism": "^2.1.6",
-        "pnpm": "^6.8.0",
-        "ts-jest": "^26.5.4",
-        "typescript": "^4.3.4",
-        "vite": "^2.3.8",
-        "vite-plugin-components": "^0.11.2",
-        "vite-plugin-icons": "^0.6.3",
-        "vite-plugin-md": "^0.6.7",
-        "vite-plugin-pages": "^0.13.2",
-        "vite-plugin-pwa": "^0.8.1",
-        "vite-plugin-vue-layouts": "^0.3.1",
-        "vite-plugin-windicss": "^1.1.0",
-        "vite-ssg": "^0.11.4",
-        "vue-jest": "^5.0.0-alpha.7",
-        "vue-tsc": "^0.2.0"
-    }
+  "name": "event-tuna",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build --force",
+    "lint": "eslint . --fix",
+    "format": "prettier --write src/"
+  },
+  "dependencies": {
+    "pinia": "^2.2.4",
+    "vue": "^3.5.11",
+    "vue-router": "^4.4.5"
+  },
+  "devDependencies": {
+    "@tsconfig/node20": "^20.1.4",
+    "@types/jsdom": "^21.1.7",
+    "@types/node": "^20.16.11",
+    "@vitejs/plugin-vue": "^5.1.4",
+    "@vitest/eslint-plugin": "1.1.7",
+    "@vue/eslint-config-prettier": "^10.0.0",
+    "@vue/eslint-config-typescript": "^14.0.0",
+    "@vue/test-utils": "^2.4.6",
+    "@vue/tsconfig": "^0.5.1",
+    "eslint": "^9.12.0",
+    "eslint-plugin-vue": "^9.28.0",
+    "jsdom": "^25.0.1",
+    "npm-run-all2": "^6.2.3",
+    "prettier": "^3.3.3",
+    "typescript": "~5.5.4",
+    "vite": "^5.4.8",
+    "vite-plugin-vue-devtools": "^7.4.6",
+    "vitest": "^2.1.2",
+    "vue-tsc": "^2.1.6"
+  }
 }
