--- a/package.json
+++ b/package.json
@@ -14,29 +14,38 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "pinia": "^2.2.4",
-    "vue": "^3.5.11",
-    "vue-router": "^4.4.5"
+    "@urql/core": "^5.1.0",
+    "@urql/vue": "^1.4.2",
+    "graphql": "^16.10.0",
+    "graphql-tag": "^2.12.6",
+    "pinia": "^2.3.0",
+    "pinia-plugin-persistedstate": "^4.2.0",
+    "uuid": "^11.0.3",
+    "vue": "^3.5.13",
+    "vue-i18n": "^11.0.1",
+    "vue-router": "^4.5.0",
+    "vuetify": "^3.7.6"
   },
   "devDependencies": {
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^20.16.11",
-    "@vitejs/plugin-vue": "^5.1.4",
-    "@vitest/eslint-plugin": "1.1.7",
-    "@vue/eslint-config-prettier": "^10.0.0",
-    "@vue/eslint-config-typescript": "^14.0.0",
+    "@types/node": "^22.10.2",
+    "@types/uuid": "^10.0.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "@vitest/eslint-plugin": "1.1.21",
+    "@vue/eslint-config-prettier": "^10.1.0",
+    "@vue/eslint-config-typescript": "^14.2.0",
     "@vue/test-utils": "^2.4.6",
-    "@vue/tsconfig": "^0.5.1",
-    "eslint": "^9.12.0",
-    "eslint-plugin-vue": "^9.28.0",
+    "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-vue": "^9.32.0",
     "jsdom": "^25.0.1",
-    "npm-run-all2": "^6.2.3",
-    "prettier": "^3.3.3",
-    "typescript": "~5.5.4",
-    "vite": "^5.4.8",
-    "vite-plugin-vue-devtools": "^7.4.6",
-    "vitest": "^2.1.2",
-    "vue-tsc": "^2.1.6"
+    "npm-run-all2": "^7.0.2",
+    "prettier": "^3.4.2",
+    "typescript": "~5.7.2",
+    "vite": "^6.0.6",
+    "vite-plugin-vue-devtools": "^7.6.8",
+    "vitest": "^2.1.8",
+    "vue-tsc": "^2.2.0"
   }
 }
